# Copyright 2019 Google LLC
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../gn/skia.gni")

config("public_config") {
  include_dirs = [ "include" ]
}

skia_component("skresources") {
  check_includes = false
  import("skresources.gni")
  public_configs = [ ":public_config" ]
  sources = skia_skresources_sources
  configs = [ "../../:skia_private" ]
  deps = [
    "../..:skia",
    "../../experimental/ffmpeg:video_decoder",
  ]
}
